--- a/index.html
+++ b/index.html
@@ -10,13 +10,26 @@
       background: linear-gradient(135deg, #d3d0f0, #9e95e0);
       color: white;
       text-align: center;
-      padding-top: 100px;
       scroll-behavior: smooth;
+    }
+
+    .screen {
+      display: none;
+      height: 100vh;
+      width: 100vw;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .visible {
+      display: flex;
     }
 
     .container {
       max-width: 600px;
       margin: auto;
+      padding-top: 100px;
     }
 
     h1 {
@@ -60,10 +73,28 @@
       box-shadow: 0 4px 6px rgba(0,0,0,0.2);
       cursor: pointer;
       transition: 0.2s;
-      text-decoration: none;
     }
 
     .corner-btn:hover {
+      background-color: #f0f0ff;
+    }
+
+    .back-btn {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      padding: 8px 16px;
+      font-weight: bold;
+      background-color: white;
+      color: #3f51b5;
+      border: 2px solid #3f51b5;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      cursor: pointer;
+      transition: 0.2s;
+    }
+
+    .back-btn:hover {
       background-color: #f0f0ff;
     }
 
@@ -103,59 +134,51 @@
       font-weight: bold;
     }
 
-    .footer-message {
-      margin-top: 40px;
-      font-weight: bold;
-      font-size: 0.9em;
-    }
-
-    .footer-sub {
-      margin-top: 8px;
-      font-size: 0.8em;
-      opacity: 0.7;
+    .enter-btn {
+      font-size: 2em;
+      color: white;
       cursor: pointer;
+      text-shadow: 0 0 10px white;
     }
   </style>
 </head>
 <body>
-  <a href="#friends" class="corner-btn">My Pookies!</a>
-
-  <div class="container">
-    <h1>about me</h1>
-    <p>hi im batl</p>
-    <p>im mr auraman</p>
-    <p>im cool</p>
-    <p><strong>ok im cool</strong></p>
-
-    <div class="footer-message">nope your too late i already died</div>
-    <div id="mute-toggle" class="footer-sub">mute</div>
-    <div class="footer-sub">0:03 - 1:30</div>
+  <div id="start-screen" class="screen visible">
+    <div class="enter-btn" onclick="showScreen('main-screen')">click to enter..</div>
   </div>
 
-  <div id="friends" class="pookies-section">
-  <h1>MY FRIENDS!!</h1>
-  <div class="friends-grid">
-    <div class="friend-card"><h2>muffn</h2><p>friend of 4 years and got lil aura!!</p></div>
-    <div class="friend-card"><h2>stomp</h2><p>d1 fat and no aura</p></div>
-    <div class="friend-card"><h2>vortex</h2><p>vortex and i touch each other yum</p></div>
-    <div class="friend-card"><h2>pixel</h2><p>pixel is very stupid and cool</p></div>
-    <div class="friend-card"><h2>brody</h2><p>gay</p></div>
+  <div id="main-screen" class="screen">
+    <button class="corner-btn" onclick="showScreen('friends-screen')">My friends!</button>
+    <div class="container">
+      <h1>about me</h1>
+      <p>hi im batl</p>
+      <p>im mr auraman</p>
+      <p>im cool</p>
+      <p><strong>ok im cool</strong></p>
+    </div>
   </div>
-</div>
-    <audio id="bg-audio" autoplay loop>
-    <source src="too-fast-lil-devo78.mp3" type="audio/mpeg">
-  </audio>
 
-  <script>
-    const audio = document.getElementById('bg-audio');
-    const muteToggle = document.getElementById('mute-toggle');
-
-    muteToggle.addEventListener('click', () => {
-      audio.muted = !audio.muted;
-      muteToggle.textContent = audio.muted ? 'unmute' : 'mute';
-    });
-  </script>
+  <div id="friends-screen" class="screen">
+    <button class="back-btn" onclick="showScreen('main-screen')">Back</button>
+    <h1>MY FRIENDS!!</h1>
+    <div class="friends-grid">
+      <div class="friend-card"><h2>muffn</h2><p>friend of 4 years and got lil aura!!</p></div>
+      <div class="friend-card"><h2>stomp</h2><p>d1 fat and no aura</p></div>
+      <div class="friend-card"><h2>vortex</h2><p>vortex and i touch each other yum</p></div>
+      <div class="friend-card"><h2>pixel</h2><p>pixel is very stupid and cool</p></div>
+      <div class="friend-card"><h2>brody</h2><p>gay</p></div>
+    </div>
+  </div>
 
   <div class="made-by">Made By batl</div>
+
+  <script>
+    function showScreen(id) {
+      document.querySelectorAll('.screen').forEach(screen => {
+        screen.classList.remove('visible');
+      });
+      document.getElementById(id).classList.add('visible');
+    }
+  </script>
 </body>
 </html>
