--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -17,7 +16,6 @@
     .fade-in {
       animation: fadeIn 1.2s ease forwards;
     }
-
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -52,6 +50,28 @@
       font-weight: bold;
     }
 
+    p {
+      margin: 10px 0;
+    }
+
+    .tag-btn {
+      display: block;
+      margin: 10px auto;
+      padding: 10px 20px;
+      background-color: #5d79ff;
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.2s;
+    }
+
+    .tag-btn:hover {
+      background-color: #4a68e0;
+    }
+
     .corner-btn {
       position: absolute;
       top: 20px;
@@ -67,8 +87,7 @@
       transition: 0.2s;
     }
 
-    .corner-btn:hover,
-    .back-btn:hover {
+    .corner-btn:hover {
       background-color: #f0f0ff;
     }
 
@@ -85,6 +104,10 @@
       box-shadow: 0 4px 6px rgba(0,0,0,0.2);
       cursor: pointer;
       transition: 0.2s;
+    }
+
+    .back-btn:hover {
+      background-color: #f0f0ff;
     }
 
     .made-by {
@@ -147,23 +170,20 @@
   </style>
 </head>
 <body>
-  <!-- Splash screen -->
   <div id="start-screen" class="screen visible">
     <div class="enter-btn" onclick="showScreen('main-screen')">click to enter..</div>
   </div>
 
-  <!-- Main screen -->
   <div id="main-screen" class="screen">
     <button class="corner-btn" onclick="showScreen('friends-screen')">My friends!</button>
     <div class="container">
       <h1 class="fade-in">hi im batl<br>im mr auraman<br>im cool<br><strong>ok im cool</strong></h1>
       <div class="invite">
-        <a href="https://discord.gg/xhREgTJRwM" target="_blank">join my discord</a>
+        <a href="https://discord.gg/xhREgTJRwM" target="_blank">join ct</a>
       </div>
     </div>
   </div>
 
-  <!-- Friends screen -->
   <div id="friends-screen" class="screen">
     <button class="back-btn" onclick="showScreen('main-screen')">Back</button>
     <h1>MY FRIENDS!!</h1>
@@ -180,23 +200,16 @@
 
   <script>
     function showScreen(id) {
-      const fromStart = document.getElementById('start-screen').classList.contains('visible');
-
       document.querySelectorAll('.screen').forEach(screen => {
         screen.classList.remove('visible');
       });
-
-      if (fromStart) {
+      document.getElementById('start-screen').classList.add('visible');
+      setTimeout(() => {
+        document.querySelectorAll('.screen').forEach(screen => {
+          screen.classList.remove('visible');
+        });
         document.getElementById(id).classList.add('visible');
-      } else {
-        document.getElementById('start-screen').classList.add('visible');
-        setTimeout(() => {
-          document.querySelectorAll('.screen').forEach(screen => {
-            screen.classList.remove('visible');
-          });
-          document.getElementById(id).classList.add('visible');
-        }, 800);
-      }
+      }, 800);
     }
   </script>
 </body>
